force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Type__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It specifies the rate type that applies to the account.</description>
    <inlineHelpText>Specifies the rate type that will apply to the account.</inlineHelpText>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Tier A</fullName>
            </value>
            <value>
                <fullName>Tier B</fullName>
            </value>
            <value>
                <fullName>Stepped</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>