force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Relationship_Under_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship_Under_Maintenance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this field with the Relationship under maintenance in context of a Deposit record.</description>
    <inlineHelpText>Enter the Relationship name associated to the Deposit under maintenance.</inlineHelpText>
    <label>Relationship Under Maintenance</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Maintenanced Deposits</relationshipLabel>
    <relationshipName>Maintenanced_Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>