force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Renewal_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Renewal_Interest_Rate__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the new interest or dividend rate upon automatic renewal.</description>
    <inlineHelpText>The new interest or dividend rate upon automatic renewal.</inlineHelpText>
    <label>Renewal Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>