force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Routing_Number__c</fullName>
    <description>--DEPRECATED-- (Replacing with Routing_Transit_Number__c) -- Populate this number (9-digit) field with the 9 Digit ABA Number for the deposit account. If creating new accounts via a core integration, this field is automatically populated. Otherwise, the field is manually populated during the deposit account opening workflow.</description>
    <label>-D Routing Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>