force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Security_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Security_Deposit_Amount__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the amount of any security deposit for the safe deposit box.</description>
    <inlineHelpText>The amount of any security deposit for the safe deposit box.</inlineHelpText>
    <label>Security Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>