force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Single_Life_Expectancy_Begins__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Single_Life_Expectancy_Begins__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the year in which single life expectancy payments must begin.</description>
    <inlineHelpText>The year in which single life expectancy payments must begin.</inlineHelpText>
    <label>Single Life Expectancy Begins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>