force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Size_of_Box__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Size_of_Box__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the size of the safe deposit box that is being leased.</description>
    <inlineHelpText>The size of the safe deposit box that is being leased.</inlineHelpText>
    <label>Size of Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>