force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Step_Rate_Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Step_Rate_Period__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the number of periods that the corresponding stepped rate applies.</description>
    <inlineHelpText>The number of periods that the corresponding stepped rate will apply.</inlineHelpText>
    <label>Step Rate Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>