force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Tax_Year_of_First_Roth_Contribution__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Tax_Year_of_First_Roth_Contribution__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the tax year of first Roth IRA contribution or conversion.</description>
    <inlineHelpText>The tax year of first Roth IRA contribution or conversion.</inlineHelpText>
    <label>Tax Year of First Roth Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>