force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__TFA_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__TFA_Activity_Type__c</fullName>
    <description>TFA Activity Type</description>
    <inlineHelpText>This indicates the type of activity that will be performed for the plan.</inlineHelpText>
    <label>TFA Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open a new plan</fullName>
            </value>
            <value>
                <fullName>Manage or maintain an existing plan</fullName>
            </value>
            <value>
                <fullName>Close an existing plan</fullName>
                <isActive>false</isActive>
                <label>Close an existing plan</label>
            </value>
            <value>
                <fullName>Request information for an existing plan</fullName>
                <isActive>false</isActive>
                <label>Request information for an existing plan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>