force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Vault_Key_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Vault_Key_Description__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It describes any vault keys that have been issued for the safe deposit box.</description>
    <inlineHelpText>A description of any vault keys that have been issued for the safe deposit box.</inlineHelpText>
    <label>Vault Key Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>