force-app/main/default/objects/LLC_BI__Deposit__c/fields/Primary_Alerted_of_Account_Open_Success__c.field-meta.xml
<CustomField>
    <fullName>Primary_Alerted_of_Account_Open_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Alerted of  Account Open Success</label>
    <type>Checkbox</type>
</CustomField>