force-app/main/default/objects/LLC_BI__Deposit__c/fields/Statement_address_same_as_mailing__c.field-meta.xml
<CustomField>
    <fullName>Statement_address_same_as_mailing__c</fullName>
    <inlineHelpText>Would you like your monthly statements sent to the mailing address on file?</inlineHelpText>
    <label>Statement address same as mailing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>